cors: accepter les espaces dans la liste des origines